# fastapi-mongo-full-stack-template

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: docker-image.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  dev_data.py  main.py  oauth.py  utils.py
backend/app/config/: __init__.py  config.py  logging.py  settings.py
backend/app/crud/: __init__.py  base.py  users.py
backend/app/database/: __init__.py  init_db.py
backend/app/dependencies/: auth.py  database.py
backend/app/models/: __init__.py  items.py  users.py
backend/app/routes/: __init__.py  auth.py  items.py  users.py
backend/app/schemas/: base.py  items.py  users.py
backend/app/tests/: conftest.py  test_auth.py
backend/development/: populate.py
backend/scripts/: start.sh
backend/tests/: conftest.py  requirements.txt  test_auth.py  test_items.py
dev/: init-db.js
frontend/: .dockerignore  .gitignore  .prettierrc.json  .yarnrc.yml  Dockerfile  README.md  components.d.ts  index.html  nginx.conf  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  tsconfig.vite-config.json  vite.config.mts  vite.config.ts
frontend/public/data-sources/: clients.json
frontend/src/: App.vue  api.ts  business.ts  main.ts  utils.ts
frontend/src/api/: auth.ts  base.ts  items.ts  users.ts
frontend/src/components/: AsideMenu.vue  BaseButton.vue  BaseIcon.vue  CardBox.vue  CardBoxClient.vue  CardBoxComponentBody.vue  CardBoxComponentHeader.vue  CardBoxComponentTitle.vue  CardBoxModal.vue  CardBoxTransaction.vue  CardBoxWidget.vue  FooterBar.vue  ForgotPassword.vue  FormCheckRadio.vue  FormCheckRadioGroup.vue  FormControl.vue  FormControlIcon.vue  FormFilePicker.vue  HelloWorld.vue  NavBar.vue  (+22 more)
(+38 files in other folders)
