[tool.poetry]
name = "app"
version = "0.1.0"
description = "Boilerplate backend for full stack app"
authors = ["Michael Bailey <mbailey1302@gmail.com>"]
license = "Propietary"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {version = "^0.95.1", extras = ["all"]}
structlog = "^23.1.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
uvicorn = "^0.21.0"
gunicorn = "^20.1.0"
beanie = "^1.17.0"
asgi-correlation-id = "^4.2.0"
bcrypt = "^4.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
isort = "^5.12.0"
flake8 = "^6.0.0"
faker = "^17.6.0"
black = "^23.3.0"
mypy = "^1.2.0"

[tool.black]
line-length=79

[tool.isort]
profile="black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
